# Foggler

./: .env  README.md  deploy.sh  docker-compose.yml  grafana-dashboard.json  servers.toml
.github/workflows/: publish.yml
foggler/: Cargo.toml  Dockerfile  servers.toml
foggler/src/: arguments.rs  configuration.rs  core.rs  logs.rs  main.rs
foggler/src/checker/: ping.rs
foggler/src/models/: servers.rs
loki/: local-config.yaml
promtail/: config.yaml
