[package]
name = "foggler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "foggler"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
fern = "0.7.1"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
