[package]
name = "foggler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "foggler"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "fmt", "json"] }
